<resources>
    <string name="app_name">Tools Teacher Utp</string>
    <string name="action_settings">Settings</string>
    <string name="receiver_class">pe.edu.utp.toolsteacherutp.MainActivity</string>
    <string name="title_activity_login">Iniciar sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">Código/E-mail</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">El password es muy corto</string>
    <string name="error_incorrect_password">El password es incorrecto</string>
    <string name="error_user_name_required">El código/e-mail son obligatorios</string>
    <string name="error_password_required">La contraseña es obligatoria</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_text_credits">Créditos</string>
    <string name="menu_text_manage">Configuración</string>
    <string name="menu_text_califications">Calificaciones</string>
    <string name="menu_text_profile">Perfil</string>
    <string name="menu_text_courses">Cursos</string>
    <string name="menu_text_schedules">Horarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">Recibir Notificaciones</string>

    <string name="pref_title_ringtone">Sonido</string>
    <string name="pref_ringtone_silent">Silencio</string>
    <string name="pref_title_vibrate">Vibrar</string>
    <string name="action_sign_out">Cerrar Sesión</string>
</resources>
