<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/menu_text_schedules" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/menu_text_courses" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/menu_text_profile" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_text_manage" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/action_sign_out" />
    </group>
</menu>
